--- a/src/App.scss
+++ b/src/App.scss
@@ -57,22 +57,46 @@
 
 .social-hireMe{
   flex-direction: row;
-  width: 25vw;
-  height: 15vw;
+  width: 250px;
+  height: 25vh;
 }
 
 .projectImage{
-  width: 20vw;
-  height: 20vw;
+  width: 300px;
+  height: 300px;
   background-repeat: no-repeat;
   background-position: center;
-  margin: 5vw;
+  margin: 30px;
   background-size: contain;
+}
+
+.align-left{
+  align-items: flex-end;
+  @media(max-width: 600px) {
+    align-items: flex-start;
+  }
+}
+.align-left p{
+  text-align: right;
+  @media(max-width: 600px) {
+    text-align: left;
+  }
+}
+.column-reverse{
+  @media(max-width: 600px) {
+    flex-direction: column-reverse !important;
+  }
+}
+.align-description{
+  align-items: flex-end;
+  @media(max-width: 600px) {
+    align-items: flex-start;
+  }
 }
 
 #intro p:nth-child(1){
   font-size: 60pt;
-  @media(max-width: 500px) {
+  @media(max-width: 615px) {
     font-size: 35pt;
     }
   @media(max-width: 400px) {
@@ -83,7 +107,7 @@
   font-family: 'Raleway', sans-serif;
   font-size: 30pt;
   font-weight: 200;
-  @media(max-width: 500px) {
+  @media(max-width: 615px) {
     font-size: 18pt;
     }
   @media(max-width: 400px) {
